# vaquita-backend

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 04557a304a38_drop_persist_from_user_api_keys.py  1484385e3813_create_categories_and_accounts_tables.py  3eb33cf683af_create_transactions_table.py  45022d06d57c_replace_category_string_with_category_.py  5fce840eb9de_add_ondelete_cascade_to_user_foreign_.py  7c2e9d6a1b45_add_transaction_account_fks.py  9a13d2f7f3b1_add_subcategories_and_transaction_subcategory_fk.py  a3c9b1d4e2f0_add_unique_index_on_categories_normalized_name.py  ab0a8eded134_add_google_id_to_users.py  b1f8f0c2a9d1_make_transaction_account_and_description_nullable.py  b4b49cfe10bf_add_user_api_keys_and_agent_usage_tables.py  b5d7a9c2e1f3_add_unique_index_on_subcategories_normalized_name.py  b7c4d2e9a6f1_drop_exchange_rate_from_transactions.py  c1a9e7f4b2d8_add_account_type_and_currency_to_accounts.py  c2d4a1b9e8f0_add_chat_interactions_and_thread_id.py  c9f1e2d3b4a5_add_receipt_url_to_transactions.py  d2f7a8c9b1e0_add_affects_balance_to_transactions.py  (+7 more)
app/: auth.py  config.py  database.py  main.py
tests/: conftest.py  test_delete_account_contract.py  test_encryption_service.py  test_expenses_filters.py  test_expenses_schema_contract.py  test_health.py  test_installments_logic.py  test_receipt_service.py  test_stats_logic.py  test_transcribe_session_api_key_contract.py  test_transfer_to_amount_logic.py  test_update_categories_contract.py  test_update_subcategories_contract.py
(+39 files in other folders)
