[project]
name = "expenses-tracker-backend"
version = "0.1.0"
description = "AI-powered expenses tracker backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "SQLAlchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.1",
]
