[project]
name = "expenses-tracker-backend"
version = "0.1.0"
description = "AI-powered expenses tracker backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "SQLAlchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.10",
    "langchain-google-genai>=4.2.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
